language/move-lang/tests/move_check/translated_ir_tests/generics/instantiation_loops/two_loops.exp
error: 

   ┌── tests/move_check/translated_ir_tests/generics/instantiation_loops/two_loops.move:8:9 ───
   │
 8 │         f<S<T>>()
   │         ^^^^^^^^^ Invalid call to '0x8675309::M::f'
   ·
 8 │         f<S<T>>()
   │           ---- The type parameter 'f::T' was instantiated with the type '0x8675309::M::S<T>', which contains the type parameter 'f::T'. This recursive call causes the instantiation to recurse infinitely
   │

error: 

    ┌── tests/move_check/translated_ir_tests/generics/instantiation_loops/two_loops.move:12:9 ───
    │
 12 │         g<S<T>>()
    │         ^^^^^^^^^ Invalid call to '0x8675309::M::g'
    ·
 12 │         g<S<T>>()
    │           ---- The type parameter 'g::T' was instantiated with the type '0x8675309::M::S<T>', which contains the type parameter 'g::T'. This recursive call causes the instantiation to recurse infinitely
    │

