language/move-lang/tests/move_check/translated_ir_tests/generics/instantiation_loops/two_loops.move
// Two loops in the resulting graph.
// One error for each loop.

module M {
    struct S<T> { b: bool }

    fun f<T>() {
        f<S<T>>()
    }

    fun g<T>() {
        g<S<T>>()
    }
}

// check: LOOP_IN_INSTANTIATION_GRAPH
// check: LOOP_IN_INSTANTIATION_GRAPH
